--- a/SeleniumSandbox/SeleniumSandbox.csproj
+++ b/SeleniumSandbox/SeleniumSandbox.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Selenium.WebDriver.IEDriver" Version="3.13.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+  </ItemGroup>
+
 </Project>
